exports[`test Empty data is correct 1`] = `Object {}`;

exports[`test Empty options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function],
  "methods": Object {},
  "name": "Empty",
  "props": Object {},
  "watch": Object {},
}
`;

exports[`test EmptyEmpty data is correct 1`] = `Object {}`;

exports[`test EmptyEmpty options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function],
  "methods": Object {},
  "name": "EmptyEmpty",
  "props": Object {},
  "watch": Object {},
}
`;

exports[`test EmptyFull data is correct 1`] = `
Object {
  "bData": "abc",
}
`;

exports[`test EmptyFull options are correct 1`] = `
Object {
  "computed": Object {
    "bComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
  },
  "created": [Function],
  "data": [Function],
  "methods": Object {
    "bMethod": [Function],
    "bWatch": [Function],
  },
  "name": "EmptyFull",
  "props": Object {
    "bProp": Object {
      "default": "abc",
      "type": [Function],
    },
  },
  "watch": Object {
    "bData": Object {
      "handler": [Function],
    },
  },
}
`;

exports[`test Full data is correct 1`] = `
Object {
  "aData": "abc",
}
`;

exports[`test Full options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
  },
  "created": [Function],
  "data": [Function],
  "methods": Object {
    "aMethod": [Function],
    "aWatch": [Function],
  },
  "name": "Full",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function],
    },
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function],
    },
  },
}
`;

exports[`test FullEmpty data is correct 1`] = `
Object {
  "aData": "abc",
}
`;

exports[`test FullEmpty options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
  },
  "data": [Function],
  "methods": Object {
    "aMethod": [Function],
    "aWatch": [Function],
  },
  "name": "FullEmpty",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function],
    },
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function],
    },
  },
}
`;

exports[`test FullFull data is correct 1`] = `
Object {
  "aData": "abc",
  "bData": "abc",
}
`;

exports[`test FullFull options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
    "bComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
  },
  "data": [Function],
  "methods": Object {
    "aMethod": [Function],
    "aWatch": [Function],
    "bMethod": [Function],
    "bWatch": [Function],
  },
  "mounted": [Function],
  "name": "FullFull",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function],
    },
    "bProp": Object {
      "default": "abc",
      "type": [Function],
    },
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function],
    },
    "bData": Object {
      "handler": [Function],
    },
  },
}
`;

exports[`test FullOverride data is correct 1`] = `
Object {
  "aData": "123",
  "bData": "abc",
}
`;

exports[`test FullOverride options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function],
      "set": [Function],
    },
  },
  "created": [Function],
  "data": [Function],
  "methods": Object {
    "aMethod": [Function],
    "aWatch": [Function],
  },
  "name": "FullOverride",
  "props": Object {
    "aProp": Object {
      "default": "123",
      "type": [Function],
    },
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function],
    },
  },
}
`;

exports[`test Root data is correct 1`] = `Object {}`;

exports[`test Root options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function],
  "methods": Object {},
  "name": "Root",
  "props": Object {},
  "watch": Object {},
}
`;
